--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -47,10 +47,11 @@ const { Content } = await post.render();
       <Content />
     </article>
     <Comments 
-      repo="YOUR_GITHUB_USERNAME/YOUR_REPO_NAME"
-      repoId="YOUR_REPO_ID"
+      repo="seb-goodman/blog"
+      repoId="R_kgDOPm58vQ"
       category="General"
-      categoryId="YOUR_CATEGORY_ID"
+      categoryId="DIC_kwDOPm58vc4CuxUW"
+      mapping="title"
     />
   </Container>
 </PageLayout>
