--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const work = await Promise.all(
       <section>
         <article class="space-y-4">
           <p class="animate">
-            Software engineer in writing Python, TypeScript, and some C++. Currently dev lead on a large scale ultra-low latency C++ and Python platform.
+            Software engineer writing Python, TypeScript, and some C++. Currently dev lead on a large ultra-low latency C++ and Python platform.
           </p>
           <p class="animate">
             Previously worked in tech public relations. Likes building stuff that goes viral. XGBoost enjoyer.
